[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corepc-client = { version = "0.12.0", features = ["client-sync"] }
env_logger = "0.11.9"
log = "0.4.29"
serde = "1.0.193"
toml = "1.0.7"
warp = { version = "0.4.2", features = ["compression", "server"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.149"

[features]
strict = [] # Treat warnings as a build error.
